Add macOS bundle properties

--- a/examples/callback_example/CMakeLists.txt
+++ b/examples/callback_example/CMakeLists.txt
@@ -13,3 +13,7 @@ add_executable(${executable_name} MACOSX_BUNDLE ${source})
 set_target_properties(${executable_name} PROPERTIES CXX_STANDARD 17)
 target_link_libraries(${executable_name} PRIVATE deskgui)
 target_compile_definitions(${executable_name} PUBLIC WEBVIEW_CONTENT_DIRECTORY="${ASSETS_DIR}") # Fix me
+
+# Set macOS bundle properties
+set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.example.${executable_name}")
+set(MACOSX_BUNDLE_BUNDLE_NAME ${executable_name})
