--- a/examples/basic_example/CMakeLists.txt
+++ b/examples/basic_example/CMakeLists.txt
@@ -10,3 +10,6 @@ add_executable(${executable_name} MACOSX_BUNDLE ${source})
 set_target_properties(${executable_name} PROPERTIES CXX_STANDARD 17)
 target_link_libraries(${executable_name} PRIVATE deskgui)
 
+# Set macOS bundle properties
+set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.example.${executable_name}")
+set(MACOSX_BUNDLE_BUNDLE_NAME ${executable_name})
