Remove PkgConfig in Macos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright (c) 2023 deskgui
 # MIT License
 
-cmake_minimum_required(VERSION 3.14...3.22)
+cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 
 # ---- Project ----
 
@@ -51,8 +51,6 @@ list(APPEND sources ${platform_sources})
 
 # ---- Create library ----
 
-# Note: for header-only libraries change all PUBLIC flags to INTERFACE and create an interface
-# target: add_library(${PROJECT_NAME} INTERFACE)
 add_library(${PROJECT_NAME} ${headers} ${sources})
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17 LINKER_LANGUAGE CXX)
 
@@ -72,7 +70,6 @@ target_include_directories(
 target_include_directories(
   ${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/source ${RapidJSON_SOURCE_DIR}/include
 )
-target_link_libraries(${PROJECT_NAME} PRIVATE PlatformWebview)
 
 if(BUILD_EXAMPLES)
   add_subdirectory(examples examples)
