--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -16,6 +16,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Add the Ubuntu Jammy repository
+      run: |
+        echo "deb http://gb.archive.ubuntu.com/ubuntu jammy main" | sudo tee -a /etc/apt/sources.list
+
     - name: Install dependencies
       run: |
         sudo apt-get update
