Support ARC memory managment and drag and drop

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,4 +9,5 @@ project(deskgui_examples LANGUAGES CXX)
 add_subdirectory(basic_example)
 add_subdirectory(callback_example)
 add_subdirectory(embedded_resources_example)
+add_subdirectory(drag_and_drop_example)
 add_subdirectory(splashscreen_example)
